# imageoptim-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.chs.md  README.md
.github/workflows/: ci.yml  release.yml
docs/brainstorms/: 2026-06-09-imageoptim-rust-cli-requirements.md
docs/plans/: 2026-06-09-001-feat-imageoptim-rust-cli-plan.md  2026-06-11-001-feat-png-palette-max-colors-plan.md
examples/: gen-fixtures.rs
src/: cli.rs  detect.rs  error.rs  lib.rs  main.rs  pipeline.rs  report.rs  safety.rs
src/optimize/: gif.rs  jpeg.rs  mod.rs  png.rs  svg.rs  webp.rs
tests/: backup.rs  integration.rs  max_colors.rs  no_zopfli.rs  other_formats.rs  output_dir.rs  png_optimization_level.rs  unit.rs  verbose_summary.rs
